@@ -1,6 +1,7 @@
 - gh-67 Use checkstyle (m1ch1)
 - gh-76 Implemented OrientDB client (lvca)
 - gh-88 YCSB client for Amazon DynamoDB (jananin)
+- gh-89 Patch for YCSB Cassandra Client version 1.0.6 (jananin)
 
 0.1.4 - 2/22/12 
 
